# serial-sensors

./: .codespellrc  .gitignore  Cargo.toml  README.md  build.rs
.config/: config.json5
.github/workflows/: rust.yml
src/: action.rs  analyze.rs  app.rs  cli.rs  components.rs  config.rs  data_buffer.rs  dumping.rs  fps_counter.rs  main.rs  packet.rs  serial.rs  text_user_interface.rs  tui.rs  utils.rs
src/components/: fps.rs  home.rs  sensors.rs  streaming.rs  utils.rs
src/text_user_interface/: app.rs  components.rs  config.rs  data_buffer.rs  fps_counter.rs
src/text_user_interface/components/: fps.rs  sensors.rs  streaming.rs  utils.rs
test/2024-07-06/stm32f3discovery/output/: .gitignore  joined.csv
