[package]
name = "serial-sensors"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
corncobs = "0.1.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rtplot = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serial-sensors-proto = { version = "0.1.0-alpha.6", features = ["std", "alloc"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-serial = "5.4.4"
