[package]
name = "serial-sensors"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
homepage = "https://github.com/sunsided/serial-sensors"
repository = "https://github.com/sunsided/serial-sensors"
edition = "2021"
publish = false

[features]
default = ["tui", "dump", "analyze"]
tui = ["serial", "dep:json5", "dep:ratatui", "dep:strip-ansi-escapes"]
dump = ["dep:async-compression", "serial"]
analyze = ["dep:polars", "dep:glob", "dep:plotters", "dep:itertools", "dep:colorgrad", "dep:ndarray", "dep:ndarray-stats"]
serial = ["dep:tokio-serial", "dep:serial-sensors-proto"]

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "color", "derive", "env", "string", "suggestions", "usage"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.30"
log = "0.4.22"
ratatui = { version = "0.27.0", optional = true }
serde = { version = "1.0.208", features = ["derive"] }
serial-sensors-proto = { version = "0.4.0", features = ["std", "alloc", "unsafe", "quaternion", "micromath"], optional = true }
signal-hook = "0.3.17"
tokio = { version = "1.39.3", features = ["full"] }
tokio-serial = { version = "5.4.4", optional = true }
tokio-util = "0.7.11"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["serde", "env-filter"] }
libc = "0.2.155"
directories = "5.0.1"
tracing-error = "0.2.0"
strip-ansi-escapes = { version = "0.2.0", optional = true }
better-panic = "0.3.0"
dotenvy = "0.15.7"
human-panic = "2.0.1"
config = "0.14.0"
strum = "0.26.3"
tui-input = { version = "0.10.0", features = ["serde"] }
derive_deref = "1.1.1"
serde_json = "1.0.125"
json5 = { version = "0.4.1", optional = true }
num-traits = "0.2.19"
async-compression = { version = "0.4.12", features = ["gzip", "tokio"], optional = true }
glob = { version = "0.3.1", optional = true }
polars = { version = "0.41.3", optional = true, default-features = false, features = ["csv", "lazy", "fmt", "polars-ops", "asof_join", "ndarray"] }
plotters = { version = "0.3.6", optional = true }
itertools = { version = "0.13.0", optional = true }
colorgrad = { version = "0.6.2", optional = true }
ndarray = { version = "0.16.0", optional = true }
ndarray-stats = { version = "0.5.1", optional = true }

[patch.crates-io]
# serial-sensors-proto = { git = "https://github.com/sunsided/serial-sensors-proto", features = ["std", "alloc", "unsafe", "quaternion", "micromath"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
